// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render when all plan targets are empty 1`] = `
<div>
  (no items selected)
</div>
`;

exports[`Render when analysis area targets are being shown 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "paddingLeft": "10px",
      }
    }
  >
    <span>
      3
       items selected
    </span>
    <button
      className="btn btn-outline-danger btn-sm float-right"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "3px",
        }
      }
    >
      <i
        className="far fa-trash-alt"
      />
    </button>
  </div>
  <ul
    style={
      Object {
        "listStyleType": "none",
        "marginBottom": "0px",
        "maxHeight": "200px",
        "overflowY": "auto",
        "paddingLeft": "0px",
      }
    }
  >
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        Seattle
      </span>
    </li>
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        More seattle
      </span>
    </li>
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        loading...
      </span>
    </li>
  </ul>
</div>
`;

exports[`Render when location targets are being shown 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "paddingLeft": "10px",
      }
    }
  >
    <span>
      3
       items selected
    </span>
    <button
      className="btn btn-outline-danger btn-sm float-right"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "3px",
        }
      }
    >
      <i
        className="far fa-trash-alt"
      />
    </button>
  </div>
  <ul
    style={
      Object {
        "listStyleType": "none",
        "marginBottom": "0px",
        "maxHeight": "200px",
        "overflowY": "auto",
        "paddingLeft": "0px",
      }
    }
  >
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        Test address 1
      </span>
    </li>
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        loading...
      </span>
    </li>
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        Test address 2
      </span>
    </li>
  </ul>
</div>
`;

exports[`Render when service area targets are being shown 1`] = `
<div>
  <div
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "paddingLeft": "10px",
      }
    }
  >
    <span>
      3
       items selected
    </span>
    <button
      className="btn btn-outline-danger btn-sm float-right"
      onClick={[Function]}
      style={
        Object {
          "marginTop": "3px",
        }
      }
    >
      <i
        className="far fa-trash-alt"
      />
    </button>
  </div>
  <ul
    style={
      Object {
        "listStyleType": "none",
        "marginBottom": "0px",
        "maxHeight": "200px",
        "overflowY": "auto",
        "paddingLeft": "0px",
      }
    }
  >
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        STTLWA09
      </span>
    </li>
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        STTLWAXX
      </span>
    </li>
    <li>
      <button
        className="btn btn-thin btn-outline-danger"
        onClick={[Function]}
        style={
          Object {
            "border": "none",
          }
        }
      >
        <i
          className="far fa-trash-alt"
        />
      </button>
      <span
        style={
          Object {
            "verticalAlign": "middle",
          }
        }
      >
        loading...
      </span>
    </li>
  </ul>
</div>
`;
